# Obstacle-avoidance-in-autonomous-navigation-with-ROS-2-

./: .gitignore  README.md  package.xml  send_goal.sh  send_goals_loop.sh  setup.py
config/: nav2_dwb_params.yaml  nav2_teb_params.yaml
launch/: planner_comparison.launch.py
obstacle_avoidance_tb3/: navigation_metrics.py  obstacle_avoidance.py
results/: metrics.csv  metrics_dwb_20260312_151013.csv  metrics_dwb_20260312_152452.csv  metrics_dwb_20260312_153343.csv  metrics_dwb_20260312_153343_summary.txt  metrics_dwb_20260312_153513.csv  metrics_dwb_20260312_153513_summary.txt  metrics_dwb_20260312_155830.csv  metrics_dwb_20260312_155830_summary.txt  metrics_dwb_20260312_163229.csv  metrics_dwb_20260312_163229_summary.txt  metrics_dwb_20260312_171633.csv  metrics_dwb_20260312_171633_summary.txt  metrics_dwb_20260312_172640.csv  metrics_mppi_20260312_151113.csv  metrics_mppi_20260312_161235.csv  metrics_mppi_20260312_165906.csv  metrics_mppi_20260312_165906_summary.txt  metrics_mppi_20260312_170326.csv  metrics_mppi_20260312_170326_summary.txt  metrics_mppi_20260312_170747.csv  metrics_mppi_20260312_170747_summary.txt  metrics_reactive_20260312_155319.csv  metrics_reactive_20260312_155319_summary.txt  metrics_reactive_20260312_162729.csv  metrics_reactive_20260312_162729_summary.txt  metrics_teb_20260312_150938.csv  metrics_teb_20260312_160323.csv  metrics_teb_20260312_164251.csv  metrics_teb_20260312_171242.csv  metrics_teb_20260312_171242_summary.txt
ros2_ws/: README.md
ros2_ws/src/obstacle_avoidance_tb3/: package.xml  setup.cfg  setup.py
ros2_ws/src/obstacle_avoidance_tb3/config/: dwa_config.yaml  mppi_config.yaml  teb_config.yaml
ros2_ws/src/obstacle_avoidance_tb3/launch/: dwb_navigation.launch.py  laser_scan.launch.py  mppi_navigation.launch.py  teb_navigation.launch.py
ros2_ws/src/obstacle_avoidance_tb3/obstacle_avoidance_tb3/: metrics_logger.py  obstacle_avoidance.py  waypoint_sender.py
(+1 files in other folders)
