<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance_tb3</name>
  <version>0.0.0</version>
  <description>Obstacle avoidance for TurtleBot3 using TEB and DWB planners</description>

  <maintainer email="md.uddin2@stud.fra-uas.de">Md Jamal Uddin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>costmap_converter</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
