<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance_tb3</name>
  <version>0.0.0</version>
  <description>Obstacle avoidance comparison (Reactive, DWB, TEB, MPPI) for TurtleBot3 using Nav2</description>

  <maintainer email="md.uddin2@stud.fra-uas.de">Md Jamal Uddin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
